--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "upload",
-  "version": "0.1.0",
-  "private": true,
+  "name": "demo-easy-code",
+  "description": "demo",
+  "version": "0.1.122",
+  "bin": {
+    "create": "./bin/cli.js"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": " https://github.com/hhimanshu/create-react-ts-starter"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "npx husky install"
   },
   "eslintConfig": {
     "extends": [
